Reorganized, got the data transfer set up for world details

--- a/WorldForging2/WorldForging2.csproj
+++ b/WorldForging2/WorldForging2.csproj
@@ -73,7 +73,8 @@
     <Content Include="app\app.component.css" />
     <Content Include="app\app.component.template.html" />
     <Content Include="app\personalCabinet\personalCabinet.component.template.html" />
-    <Content Include="app\worlds\worlds.component.template.html" />
+    <Content Include="app\worlds\details\worlddetails.component.template.html" />
+    <Content Include="app\worlds\index\worlds.component.template.html" />
     <Content Include="Index.html" />
     <Content Include="package.json" />
     <Content Include="packages.config" />
@@ -108,11 +109,13 @@
     <TypeScriptCompile Include="app\main.ts" />
     <TypeScriptCompile Include="app\personalCabinet\personalCabinet.component.ts" />
     <TypeScriptCompile Include="app\rxjs-operators.ts" />
-    <TypeScriptCompile Include="app\worldListService\world.ts" />
-    <TypeScriptCompile Include="app\worldListService\worldList.service.ts" />
+    <TypeScriptCompile Include="app\worlds\services\worldDetails.service.ts" />
+    <TypeScriptCompile Include="app\worlds\world.ts" />
+    <TypeScriptCompile Include="app\worlds\services\worldList.service.ts" />
     <TypeScriptCompile Include="app\usefullLinksService\link.ts" />
     <TypeScriptCompile Include="app\usefullLinksService\usefullLink.service.ts" />
-    <TypeScriptCompile Include="app\worlds\worlds.component.ts" />
+    <TypeScriptCompile Include="app\worlds\details\worlddetails.component.ts" />
+    <TypeScriptCompile Include="app\worlds\index\worlds.component.ts" />
   </ItemGroup>
   <ItemGroup />
   <PropertyGroup>
