--- a/WorldForgingApi/project.json
+++ b/WorldForgingApi/project.json
@@ -25,7 +25,9 @@
     "Microsoft.AspNetCore.Authentication.JwtBearer": "1.0.0",
     "Microsoft.AspNetCore.StaticFiles": "1.0.0",
     "Microsoft.VisualStudio.Web.BrowserLink.Loader": "14.0.0",
-    "Newtonsoft.Json": "9.0.1"
+    "Newtonsoft.Json": "9.0.1",
+    "Microsoft.AspNetCore.Identity.EntityFrameworkCore": "1.0.0",
+    "AutoMapper": "5.2.0"
   },
 
   "tools": {
