--- a/WorldForgingApi/project.json
+++ b/WorldForgingApi/project.json
@@ -1,4 +1,5 @@
 {
+  "userSecretsId": "worldforging-c23d27a4-eb88-4b18-9b77-2a93f3b15119",
   "dependencies": {
     "Microsoft.NETCore.App": {
       "version": "1.0.0",
@@ -28,12 +29,18 @@
     "Newtonsoft.Json": "9.0.1",
     "AutoMapper": "5.2.0",
     "Microsoft.IdentityModel.Tokens": "5.0.0",
-    "System.IdentityModel.Tokens.Jwt": "5.0.0"
+    "System.IdentityModel.Tokens.Jwt": "5.0.0",
+    "OpenIddict": "1.0.0-alpha2-0419",
+    "Microsoft.Extensions.Configuration.UserSecrets": "1.0.0",
+    "Microsoft.AspNetCore.Authentication.Facebook": "1.0.0",
+    "Microsoft.AspNetCore.Authentication.Google": "1.0.0",
+    "Microsoft.AspNetCore.Authentication.Twitter": "1.0.0"
   },
 
   "tools": {
     "Microsoft.EntityFrameworkCore.Tools": "1.0.0-preview2-final",
-    "Microsoft.AspNetCore.Server.IISIntegration.Tools": "1.0.0-preview2-final"
+    "Microsoft.AspNetCore.Server.IISIntegration.Tools": "1.0.0-preview2-final",
+    "Microsoft.Extensions.SecretManager.Tools": "1.0.0-preview2-final"
   },
 
   "frameworks": {
