Chapter 8 halfway done - working

--- a/WorldForgingApi/appsettings.json
+++ b/WorldForgingApi/appsettings.json
@@ -1,22 +1,33 @@
 ﻿{
-  "Data": {
-    "DefaultConnection": {
-      "ConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=WorldForging;Integrated Security=True; MultipleActiveResultSets=True"
-    }
-  },
-  "Logging": {
-    "IncludeScopes": false,
-    "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
-    }
-  },
-  "StaticFiles": {
-    "Headers": {
-      "Cache-Control": "no-cache, no-store",
-      "Pragma": "no-cache",
-      "Expires": "-1"
+    "Authentication": {
+      "OpenIddict": {
+        "ApplicationId": "OpenGameList",
+        "DisplayName": "OpenGameList",
+        "TokenEndPoint": "/api/connect/token",
+        "AuthorizationEndPoint": "/api/connect/authorize",
+        "ClientId": "OpenGameList",
+        "ClientSecret": "1234567890_my_client_secret",
+        "Authority": "http://localhost:14600/"
+      }
+    },
+    "Data": {
+      "DefaultConnection": {
+        "ConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=WorldForging;Integrated Security=True; MultipleActiveResultSets=True"
+      }
+    },
+    "Logging": {
+      "IncludeScopes": false,
+      "LogLevel": {
+        "Default": "Debug",
+        "System": "Information",
+        "Microsoft": "Information"
+      }
+    },
+    "StaticFiles": {
+      "Headers": {
+        "Cache-Control": "no-cache, no-store",
+        "Pragma": "no-cache",
+        "Expires": "-1"
+      }
     }
   }
-}
