--- a/WorldForgingApi/project.json
+++ b/WorldForgingApi/project.json
@@ -28,7 +28,8 @@
     "Newtonsoft.Json": "9.0.1",
     "AutoMapper": "5.2.0",
     "Microsoft.IdentityModel.Tokens": "5.0.0",
-    "System.IdentityModel.Tokens.Jwt": "5.0.0"
+    "System.IdentityModel.Tokens.Jwt": "5.0.0",
+    "OpenIddict": "1.0.0-alpha2-0419"
   },
 
   "tools": {
