Further changes to convert "items" to "articles"

--- a/WorldForgingApi/appsettings.json
+++ b/WorldForgingApi/appsettings.json
@@ -1,11 +1,11 @@
 ﻿{
     "Authentication": {
       "OpenIddict": {
-        "ApplicationId": "OpenGameList",
-        "DisplayName": "OpenGameList",
+        "ApplicationId": "WorldForging",
+        "DisplayName": "World Forging",
         "TokenEndPoint": "/api/connect/token",
         "AuthorizationEndPoint": "/api/connect/authorize",
-        "ClientId": "OpenGameList",
+        "ClientId": "WorldForging",
         "ClientSecret": "1234567890_my_client_secret",
         "Authority": "http://localhost:14600/"
       }
